--- a/index.html
+++ b/index.html
@@ -57,7 +57,7 @@
         <div id="section2__alignement">
             <div class="section2__element">
             <a href="menu1.html">
-                <img class="section2__image" src="images/PaletteDuGout.jpg" alt="">
+                <img class="section2__image" src="images/PaletteDuGout.jpg" alt="Plat du restaurant La Palette du Gout">
                 <div class="section2__text"><h3>La palette du goût</h3>
                 <p>Ménilmontant</p></div>
                 <div class="heart">
@@ -70,9 +70,9 @@
 
             <div class="section2__element">
             <a href="menu2.html">
-                <img class="section2__image" src="images/NoteEnchantee.jpg" alt="">
-                <h3>La note enchantée</h3>
-                <p>Charonne</p>
+                <img class="section2__image" src="images/NoteEnchantee.jpg" alt="Plat du restaurant la Note enchantée">
+                <div class="section2__text"><h3>La note enchantée</h3>
+                <p>Charonne</p></div>
                 <div class="heart">
                     <div class="empty"><img class="empty_heart" src="images/heart.png" alt=""></div>
                     <div class="full"><img class="full_heart" src="images/heart.png" alt=""></div>
@@ -82,9 +82,9 @@
             </div>
             <div class="section2__element">
             <a href="menu3.html">
-                <img class="section2__image" src="images/ALaFrançaise.jpg" alt="">
-                <h3>A la Française</h3>
-                <p>Cité Rouge</p>
+                <img class="section2__image" src="images/ALaFrançaise.jpg" alt="Plat du restaurant A la Française">
+                <div class="section2__text"><h3>A la Française</h3>
+                <p>Cité Rouge</p></div>
                 <div class="heart">
                     <div class="empty"><img class="empty_heart" src="images/heart.png" alt=""></div>
                     <div class="full"><img class="full_heart" src="images/heart.png" alt=""></div>
@@ -93,9 +93,9 @@
             </div>
             <div class="section2__element">
             <a href="menu4.html">
-                <img class="section2__image" src="images/DeliceDesSens.jpg" alt="">
-                <h3>Le délice des sens</h3>
-                <p>Folie-Méricourt</p>
+                <img class="section2__image" src="images/DeliceDesSens.jpg" alt="Plat du restaurant le Délice des sens">
+                <div class="section2__text"><h3>Le délice des sens</h3>
+                <p>Folie-Méricourt</p></div>
                 <div class="heart">
                     <div class="empty"><img class="empty_heart" src="images/heart.png" alt=""></div>
                     <div class="full"><img class="full_heart" src="images/heart.png" alt=""></div>
