--- a/menu1.html
+++ b/menu1.html
@@ -20,7 +20,7 @@
     </header>
 
     <section class="menu">
-        <img class="menu__image" src="images/PaletteDuGout.jpg" alt="">
+        <img class="menu__image" src="images/PaletteDuGout.jpg" alt="Plat du restaurant la Palette du Gout">
         <div class="menu__head">
             <div class="menu__head__element">
                 <h2>La palette du goût</h2>
