--- a/menu2.html
+++ b/menu2.html
@@ -20,7 +20,7 @@
     </header>
 
     <section class="menu">
-        <img class="menu__image" src="images/NoteEnchantee.jpg" alt="">
+        <img class="menu__image" src="images/NoteEnchantee.jpg" alt="Plat du restaurant la Note Enchantée">
         <div class="menu__head">
             <div class="menu__head__element">
                 <h1>La note enchantée</h1>
