--- a/menu3.html
+++ b/menu3.html
@@ -20,7 +20,7 @@
     </header>
 
     <section class="menu">
-        <img class="menu__image" src="images/ALaFrançaise.jpg" alt="">
+        <img class="menu__image" src="images/ALaFrançaise.jpg" alt="Plat du restaurant A la Française">
         <div class="menu__head">
             <div class="menu__head__element">
                 <h2>À la française</h2>
