--- a/menu4.html
+++ b/menu4.html
@@ -20,7 +20,7 @@
     </header>
 
     <section class="menu">
-        <img class="menu__image" src="images/DeliceDesSens.jpg" alt="">
+        <img class="menu__image" src="images/DeliceDesSens.jpg" alt="Plat du restaurant le délice des sens">
         <div class="menu__head">
             <div class="menu__head__element">
                 <h2>Le délice des sens</h2>
