--- a/menu4.html
+++ b/menu4.html
@@ -4,7 +4,7 @@
     <meta charset="UTF-8">
     <meta http-equiv="X-UA-Compatible" content="IE=edge">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
-    <meta name="menu" content="OhMyFood">
+    <meta name="menu" content="OhMyFood | Menu du restaurant Le Délice des Sens">
     <title>La palette du goût</title>
     <link rel="stylesheet" href="styles.css">
     
