Correction faute d'orthographe

--- a/index.html
+++ b/index.html
@@ -47,7 +47,7 @@
         <div class="section1__element">
             <div class="section1__number--background"><div class="section1__number--font">3</div></div>
             <i class="fa-solid fa-store fa-lg"></i>
-            <p>Déguster au restaurant</p>
+            <p>Dégustez au restaurant</p>
         </div>
     </section>
 
