ajustement responsive design

--- a/index.html
+++ b/index.html
@@ -33,7 +33,7 @@
 
     <!-- Section Fonctionnement -->
     <section id="section1">
-        <h2>Fonctionnement</h2>
+        <h2 class="section2__titre">Fonctionnement</h2>
         <div class="section1__element">
             <div class="section1__number--background"><div class="section1__number--font">1</div></div>
             <i class="fa-solid fa-mobile-screen-button fa-lg"></i>
@@ -53,7 +53,7 @@
 
     <!-- Section Restaurant -->
     <section id="section2">
-        <h2>Restaurants</h2>
+        <h2 class="section2__titre">Restaurants</h2>
         <div id="section2__alignement">
             <div class="section2__element">
             <a href="menu1.html">
