correction lien adresse

--- a/menu2.html
+++ b/menu2.html
@@ -289,7 +289,7 @@
             <div><i class="fa-solid fa-utensils"></i>Proposer un restaurant</div>
             <div><i class="fa-solid fa-handshake-angle"></i>Devenir Partenaire</div>
             <div>Mentions légales</div>
-            <div><a href="adresse@ohmyfood.fr">Contact</a></div>  
+            <div><a href="mailto:adresse@ohmyfood.fr">Contact</a></div>  
         </div>    
     </footer>
 
