Ajustement responsive design

--- a/menu3.html
+++ b/menu3.html
@@ -31,7 +31,7 @@
             </div>
         </div>
 
-        <div class="plats">
+        <div class="plats" id="text__overflow__menu3">
         <h3 class="plats_title">ENTRÉES</h3>
         <div class="title_sub"></div>
 
