Correction du coeur

--- a/index.html
+++ b/index.html
@@ -60,12 +60,12 @@
                 <img class="section2__image" src="images/PaletteDuGout.jpg" alt="Plat du restaurant La Palette du Gout">
                 <div class="section2__text"><h3>La palette du goût</h3>
                 <p>Ménilmontant</p></div>
-                <div class="heart">
-                    <div class="empty"><img class="empty_heart" src="images/heart.png" alt=""></div>
-                    <div class="full"><img class="full_heart" src="images/heart.png" alt=""></div>
-                </div>
                 <div class="section2__element__label">Nouveau</div>
             </a>
+                <div class="heart">
+                    <i class="fa-regular fa-heart heart_empty"></i>
+                    <i class="fa-solid fa-heart heart_full"></i>
+                </div>
             </div>
 
             <div class="section2__element">
@@ -73,34 +73,34 @@
                 <img class="section2__image" src="images/NoteEnchantee.jpg" alt="Plat du restaurant la Note enchantée">
                 <div class="section2__text"><h3>La note enchantée</h3>
                 <p>Charonne</p></div>
-                <div class="heart">
-                    <div class="empty"><img class="empty_heart" src="images/heart.png" alt=""></div>
-                    <div class="full"><img class="full_heart" src="images/heart.png" alt=""></div>
-                </div>
                 <div class="section2__element__label">Nouveau</div>
             </a>
+                <div class="heart">
+                    <i class="fa-regular fa-heart heart_empty"></i>
+                    <i class="fa-solid fa-heart heart_full"></i>
+                </div>
             </div>
             <div class="section2__element">
             <a href="menu3.html">
                 <img class="section2__image" src="images/ALaFrançaise.jpg" alt="Plat du restaurant A la Française">
                 <div class="section2__text"><h3>A la Française</h3>
                 <p>Cité Rouge</p></div>
-                <div class="heart">
-                    <div class="empty"><img class="empty_heart" src="images/heart.png" alt=""></div>
-                    <div class="full"><img class="full_heart" src="images/heart.png" alt=""></div>
-                </div>
             </a>
+                <div class="heart2">
+                    <i class="fa-regular fa-heart heart_empty"></i>
+                    <i class="fa-solid fa-heart heart_full"></i>
+                </div>
             </div>
             <div class="section2__element">
             <a href="menu4.html">
                 <img class="section2__image" src="images/DeliceDesSens.jpg" alt="Plat du restaurant le Délice des sens">
                 <div class="section2__text"><h3>Le délice des sens</h3>
                 <p>Folie-Méricourt</p></div>
-                <div class="heart">
-                    <div class="empty"><img class="empty_heart" src="images/heart.png" alt=""></div>
-                    <div class="full"><img class="full_heart" src="images/heart.png" alt=""></div>
-                </div>
             </a>
+                <div class="heart2">
+                    <i class="fa-regular fa-heart heart_empty"></i>
+                    <i class="fa-solid fa-heart heart_full"></i>
+                </div>
             </div>
         </div>   
         </section>
