--- a/menu3.html
+++ b/menu3.html
@@ -25,8 +25,8 @@
             <div class="menu__head__element">
                 <h2>À la française</h2>
                 <div class="menu__heart">
-                    <div><img class="empty_heart2" src="images/heart2.png" alt=""></div>
-                    <div><img class="full_heart2" src="images/heart2.png" alt=""></div>
+                    <i class="fa-regular fa-heart menu_heart_empty"></i>
+                    <i class="fa-solid fa-heart menu_heart_full"></i>
                 </div>
             </div>
         </div>
