--- a/menu2.html
+++ b/menu2.html
@@ -173,8 +173,8 @@
             <div class="menu__head__element">
                 <h1>La note enchantée</h1>
                 <div class="menu__heart">
-                    <div><img class="empty_heart2" src="images/heart2.png" alt=""></div>
-                    <div><img class="full_heart2" src="images/heart2.png" alt=""></div>
+                    <i class="fa-regular fa-heart menu_heart_empty"></i>
+                    <i class="fa-solid fa-heart menu_heart_full"></i>
                 </div>
             </div>
         </div>
