--- a/contact.html
+++ b/contact.html
@@ -23,7 +23,7 @@
 <div class="container bloc-sm">
 <nav class="navbar row">
 <div class=navbar-header>
-<a class=navbar-brand href=index.html><img src=img/agence-la-panthere-monochrome.svg alt="La Panthère agence de webdesign" height=40 /></a>
+<a class=navbar-brand href=index.html><img src=img/agence-la-panthere-monochrome.webp type="image/webp" alt="La Panthère agence de webdesign" height=40 /></a>
 <button id=nav-toggle type=button class="ui-navbar-toggle navbar-toggle" data-toggle=collapse data-target=.navbar-1>
 <span class=sr-only>Toggle navigation</span><span class=icon-bar></span><span class=icon-bar></span><span class=icon-bar></span>
 </button>
