--- a/index.html
+++ b/index.html
@@ -23,7 +23,7 @@
 <div class="container bloc-sm">
 <nav class="navbar row">
 <div class=navbar-header>
-<a class=navbar-brand href=index.html><img src=img/agence-la-panthere-monochrome.svg alt="La Panthère agence de webdesign" height=40 /></a>
+<a class=navbar-brand href=index.html><img src=img/agence-la-panthere-monochrome.webp type="image/webp" alt="La Panthère agence de webdesign" height=40 /></a>
 <button id=nav-toggle type=button class="ui-navbar-toggle navbar-toggle" data-toggle=collapse data-target=.navbar-1>
 <span class=sr-only>Toggle navigation</span><span class=icon-bar></span><span class=icon-bar></span><span class=icon-bar></span>
 </button>
@@ -45,7 +45,7 @@
 <div class="container bloc-lg">
 <div class="row tight-width-whitespace">
 <div class=col-sm-12>
-<img src=img/logo.png class="center-block image-resize-mode" width=100 alt="Logo de l'agence La Panthère représentant une tête de panthère" />
+<img src=img/logo.webp  class="center-block image-resize-mode" width=100 alt="Logo de l'agence La Panthère représentant une tête de panthère" />
 <h1 class="text-center hero-bloc-text tc-white">
 Agence La Panthère
 </h1>
