--- a/contact.html
+++ b/contact.html
@@ -97,7 +97,7 @@ Email: contact@agencelapanthere.com<br>Adresse: 2 place Sathonay 69001 Lyon<br>H
 </div>
 </div>
 </div>
-<a class="bloc-button btn btn-d scrollToTop" onclick="scrollToTarget('1')"><span class="fa fa-chevron-up"></span></a>
+<div class="bloc-button btn btn-d scrollToTop" onclick="scrollToTarget('1')"><span class="fa fa-chevron-up"></span></div>
 <div class="bloc bgc-atomic-tangerine d-bloc" id=bloc-8>
 <div class="container bloc-sm">
 <div class=row>
