--- a/contact.html
+++ b/contact.html
@@ -15,7 +15,7 @@
 <script src=./js/blocs.js></script>
 <script src=./js/jqBootstrapValidation.js></script>
 <script src=./js/formHandler.js></script>
-
+<title>Nous contacter | La Panthère</title>
 </head>
 <body>
 <div class=page-container>
