--- a/contact.html
+++ b/contact.html
@@ -108,22 +108,22 @@ Agence La Panthère - Agence web basée à Lyon.<br>
 <div class="row row-no-gutters social">
 <div class=col-sm-3>
 <div class=text-center>
-<a class=social href=index.html alt="Twitter de la Panthère"><span class="fa fa-twitter icon-md"></span></a>
+<a class=social href=index.html><span class="fa fa-twitter icon-md" alt="Twitter de la Panthère"></span></a>
 </div>
 </div>
 <div class=col-sm-3>
 <div class=text-center>
-<a class=social href=index.html alt="Facebool de la Panthère"><span class="fa fa-facebook icon-md"></span></a>
+<a class=social href=index.html><span class="fa fa-facebook icon-md" alt="Facebool de la Panthère"></span></a>
 </div>
 </div>
 <div class=col-sm-3>
 <div class=text-center>
-<a class=social href=index.html alt="Dribble de la Panthère"><span class="fa fa-dribbble icon-md"></span></a>
+<a class=social href=index.html><span class="fa fa-dribbble icon-md" alt="Dribble de la Panthère"></span></a>
 </div>
 </div>
 <div class=col-sm-3>
 <div class=text-center>
-<a class=social href=index.html alt="Instagram de la Panthère"><span class="fa fa-instagram icon-md"></span></a>
+<a class=social href=index.html><span class="fa fa-instagram icon-md" alt="Instagram de la Panthère"></span></a>
 </div>
 </div>
 </div>
