--- a/contact.html
+++ b/contact.html
@@ -108,7 +108,7 @@ Agence La Panthère - Agence web basée à Lyon.<br>
 <div class="row row-no-gutters social">
 <div class=col-sm-3>
 <div class=text-center>
-<a class=social href=index.html><span class="fa fa-twitter icon-md" aria-label="Twitter"></span></a>
+<a class=social href=index.html><span class="fa fa-twitter icon-md"></span></a>
 </div>
 </div>
 <div class=col-sm-3>
