--- a/index.html
+++ b/index.html
@@ -227,24 +227,24 @@ Agence La Panthère - Agence web basée à Lyon.<br>
             <li class="tap_size"><a href="annuairemarketing.com">annuairemarketing.com</a></li>
             <li class="tap_size"><a href="123seoture.com">123seo.com</a></li>
             <li class="tap_size"><a href="123site.com">123site.com</a></li>
-            <li><a href="annuairewordpress.com">annuairewordpress.com</a></li>
-            <li><a href="listeagence.com">listeagence.com</a></li>
-            <li><a href="meilleuresagencesparis.com">meilleuresagencesparis.com</a></li>
-            <li><a href="listeseo.com">listeseo.com</a></li>
+            <li class="tap_size"><a href="annuairewordpress.com">annuairewordpress.com</a></li>
+            <li class="tap_size"><a href="listeagence.com">listeagence.com</a></li>
+            <li class="tap_size"><a href="meilleuresagencesparis.com">meilleuresagencesparis.com</a></li>
+            <li class="tap_size"><a href="listeseo.com">listeseo.com</a></li>
         </ul>
     </div>
     <div class="col-sm-4">
         Annuaires liste 2
         <ul>
-            <li><a href="betterseo.com">betterseo.com</a></li>
-            <li><a href="ameliorerseo.com">ameliorerseo.com</a></li>
-            <li><a href="seojuicelien.com">seojuicelien.com</a></li>
-            <li><a href="meilleursliens.com">meilleursliens.com</a></li>
-            <li><a href="liensagogo.com">liensagogo.com</a></li>
-            <li><a href="backlink.com">backlink.com</a></li>
-            <li><a href="linkjuiceannuaire.com">linkjuiceannuaire.com</a></li>
-            <li><a href="remontersurgoogle.com">remontersurgoogle.com</a></li>
-            <li><a href="vraiseofiable.com">vraiseofiable.com</a></li>
+            <li class="tap_size"><a href="betterseo.com">betterseo.com</a></li>
+            <li class="tap_size"><a href="ameliorerseo.com">ameliorerseo.com</a></li>
+            <li class="tap_size"><a href="seojuicelien.com">seojuicelien.com</a></li>
+            <li class="tap_size"><a href="meilleursliens.com">meilleursliens.com</a></li>
+            <li class="tap_size"><a href="liensagogo.com">liensagogo.com</a></li>
+            <li class="tap_size"><a href="backlink.com">backlink.com</a></li>
+            <li class="tap_size"><a href="linkjuiceannuaire.com">linkjuiceannuaire.com</a></li>
+            <li class="tap_size"><a href="remontersurgoogle.com">remontersurgoogle.com</a></li>
+            <li class="tap_size"><a href="vraiseofiable.com">vraiseofiable.com</a></li>
         </ul>
     </div>
 </div>
