--- a/index.html
+++ b/index.html
@@ -23,7 +23,7 @@
 <div class="container bloc-sm">
 <nav class="navbar row">
 <div class=navbar-header>
-<a class=navbar-brand href=index.html><img src=img/agence-la-panthere-monochrome.webp alt="La Panthère agence de webdesign" height=40></a>
+<a class=navbar-brand href=index.html><img src=img/agence-la-panthere-monochrome.webp alt="La Panthère agence de webdesign à Lyon" height=40></a>
 <button id=nav-toggle type=button class="ui-navbar-toggle navbar-toggle" data-toggle=collapse data-target=.navbar-1>
 <span class=sr-only>Toggle navigation</span><span class=icon-bar></span><span class=icon-bar></span><span class=icon-bar></span>
 </button>
@@ -190,22 +190,22 @@ Agence La Panthère - Agence web basée à Lyon.<br>
 <div class="row row-no-gutters social">
 <div class=col-sm-3>
 <div class=text-center>
-<a class=social href=index.html><span class="fa fa-twitter icon-md"></span></a>
+<a class=social href=index.html aria-label="Twitter"><span class="fa fa-twitter icon-md"></span></a>
 </div>
 </div>
 <div class=col-sm-3>
 <div class=text-center>
-<a class=social href=index.html><span class="fa fa-facebook icon-md"></span></a>
+<a class=social href=index.html aria-label="Facebook"><span class="fa fa-facebook icon-md"></span></a>
 </div>
 </div>
 <div class=col-sm-3>
 <div class=text-center>
-<a class=social href=index.html><span class="fa fa-dribbble icon-md"></span></a>
+<a class=social href=index.html aria-label="Dribble"><span class="fa fa-dribbble icon-md"></span></a>
 </div>
 </div>
 <div class=col-sm-3>
 <div class=text-center>
-<a class=social href=index.html><span class="fa fa-instagram icon-md"></span></a>
+<a class=social href=index.html aria-label="Instagram"><span class="fa fa-instagram icon-md"></span></a>
 </div>
 </div>
 </div>
