--- a/contact.html
+++ b/contact.html
@@ -10,11 +10,11 @@
 <link rel=stylesheet type=text/css href=style.css>
 <link rel=stylesheet type=text/css href=./css/font-awesome.css>
 <link rel=stylesheet type=text/css href=./css/et-line.css>
-<script src=./js/jquery-2.1.0.js></script>
-<script src=./js/bootstrap.js></script>
-<script src=./js/blocs.js></script>
-<script src=./js/jqBootstrapValidation.js></script>
-<script src=./js/formHandler.js></script>
+<script async src=./js/jquery-2.1.0.js></script>
+<script async src=./js/bootstrap.js></script>
+<script async src=./js/blocs.js></script>
+<script async src=./js/jqBootstrapValidation.js></script>
+<script async src=./js/formHandler.js></script>
 <title>Nous contacter | La Panthère</title>
 </head>
 <body>
@@ -23,7 +23,7 @@
 <div class="container bloc-sm">
 <nav class="navbar row">
 <div class=navbar-header>
-<a class=navbar-brand href=index.html><img src=img/agence-la-panthere-monochrome.webp alt="La Panthère agence de webdesign" height=40></a>
+<a class=navbar-brand href=index.html><img src=img/agence-la-panthere-monochrome.webp alt="La Panthère agence de webdesign à Lyon" height=40></a>
 <button id=nav-toggle type=button class="ui-navbar-toggle navbar-toggle" data-toggle=collapse data-target=.navbar-1>
 <span class=sr-only>Toggle navigation</span><span class=icon-bar></span><span class=icon-bar></span><span class=icon-bar></span>
 </button>
