--- a/index.html
+++ b/index.html
@@ -2,6 +2,7 @@
 <html lang=fr>
 <head>
 <meta charset=utf-8>
+<meta name="robots" content="index, follow">
 <meta name=keywords content="Entreprise webdesign Lyon, Agence webdesign Lyon, SEO, UX, UI, site web, identité visuelle, refonte de site">
 <meta name=description content="La Panthère est une agence webdesign à Lyon. Nous vous accompagnons pour rendre votre site attractif et visible sur internet.">
 <meta name=viewport content="width=device-width, initial-scale=1.0, viewport-fit=cover">
