--- a/index.html
+++ b/index.html
@@ -24,7 +24,7 @@
 <div class="container bloc-sm">
 <nav class="navbar row">
 <div class=navbar-header>
-<a class=navbar-brand href=index.html><img src=img/agence-la-panthere-monochrome.webp alt="Logo La Panthère agence de webdesign à Lyon" title="La Panthère agence de webdesign Lyon" height=40></a>
+<a class=navbar-brand href=index.html><img src=img/agence-la-panthere-monochrome.webp alt="Logo La Panthère agence de webdesign à Lyon" height=40></a>
 <button id=nav-toggle type=button class="ui-navbar-toggle navbar-toggle" data-toggle=collapse data-target=.navbar-1>
 <span class=sr-only>Toggle navigation</span><span class=icon-bar></span><span class=icon-bar></span><span class=icon-bar></span>
 </button>
@@ -46,7 +46,7 @@
 <div class="container bloc-lg">
 <div class="row tight-width-whitespace">
 <div class=col-sm-12>
-<img src=img/logo.webp  class="center-block image-resize-mode" width=100 alt="La Panthère agence de webdesign" title="Logo La Panthère agence de webdesign">
+<img src=img/logo.webp  class="center-block image-resize-mode" width=100 alt="Logo de La Panthère agence de webdesign">
 <h1 class="text-center hero-bloc-text tc-white">
 Agence La Panthère
 </h1>
@@ -129,7 +129,7 @@ Nous aimons collaborer avec des entrepreneurs créatifs et des entreprises local
 </div>
 <div class="row tight-width-whitespace portfolio-row">
 <div class=col-sm-6>
-<a href=# data-lightbox=img/1.webp data-gallery-id=gallery-1 data-caption="Refonte d'un site web pour un journal local" title="Illustration de la refonte d'un site web" data-frame=snapshot-lb><img src=img/1.webp alt="Refonte site web journal" class="img-responsive portfolio-thumb"></a>
+<a href=# data-lightbox=img/1.webp data-gallery-id=gallery-1 data-caption="Refonte d'un site web pour un journal local" data-frame=snapshot-lb><img src=img/1.webp alt="Refonte site web journal" class="img-responsive portfolio-thumb"></a>
 <h3 class="mg-md text-center">
 Refonte d'un site web pour un journal local
 </h3>
@@ -138,7 +138,7 @@ Nous avons créé une nouvelle identité visuelle pour un journal lyonnais.
 </p>
 </div>
 <div class=col-sm-6>
-<a href=# data-lightbox=img/2.webp data-gallery-id=gallery-1 data-caption="Création d'un site web pour photographes" title="Illustration de la création d'un site web" data-frame=snapshot-lb><img src=img/2.webp class="img-responsive portfolio-thumb" alt="Création d'un site web pour photographes"></a>
+<a href=# data-lightbox=img/2.webp data-gallery-id=gallery-1 data-caption="Création d'un site web pour photographes" data-frame=snapshot-lb><img src=img/2.webp class="img-responsive portfolio-thumb" alt="Création d'un site web pour photographes"></a>
 <h3 class="mg-md text-center">
 Création d'un site web pour photographes
 </h3>
@@ -149,7 +149,7 @@ Nous avons conçu la plateforme idéale pour laisser place aux clichés des phot
 </div>
 <div class="row tight-width-whitespace portfolio-row">
 <div class=col-sm-6>
-<a href=# data-lightbox=img/3.webp data-gallery-id=gallery-1 data-caption="Création d'un site internet pour un voyageur" title="Illustration de la création d'un site web" data-frame=snapshot-lb><img src=img/3.webp class="img-responsive portfolio-thumb" alt="Création d'un site web pour voyageur"></a>
+<a href=# data-lightbox=img/3.webp data-gallery-id=gallery-1 data-caption="Création d'un site internet pour un voyageur" data-frame=snapshot-lb><img src=img/3.webp class="img-responsive portfolio-thumb" alt="Création d'un site web pour voyageur"></a>
 <h3 class="mg-md text-center">
 Création d'un site internet pour un voyageur
 </h3>
@@ -158,7 +158,7 @@ Nous avons élaboré un site internet et des illustrations pour sublimer les vid
 </p>
 </div>
 <div class=col-sm-6>
-<a href=# data-lightbox=img/4.webp data-gallery-id=gallery-1 data-caption="Conception d'un site pour une agence de mariage" title="Illustration de la création d'un site web" data-frame=snapshot-lb><img src=img/4.webp class="img-responsive portfolio-thumb" alt="Création d'un site web pour agence de mariage"></a>
+<a href=# data-lightbox=img/4.webp data-gallery-id=gallery-1 data-caption="Conception d'un site pour une agence de mariage" data-frame=snapshot-lb><img src=img/4.webp class="img-responsive portfolio-thumb" alt="Création d'un site web pour agence de mariage"></a>
 <h3 class="mg-md text-center">
 Conception d'un site pour une agence de mariage
 </h3>
